# ME-433

./: README.md
HW11/: me433_hw11.py
HW12/: CMakeLists.txt  HW12.c
HW13/: CMakeLists.txt  main.c
HW14/: hw14.py
HW2 Upload/: CMakeLists.txt  blinky.c
HW3 Upload/: CMakeLists.txt
HW3 Upload/hw3/: CMakeLists.txt  hw3.c
HW3/hw3/: CMakeLists.txt  hw3.c
HW4/: CMakeLists.txt  hw4_spi.c
HW4/hw4/: CMakeLists.txt  MCP4912_spi.c  bme280_spi.c  hw4_spi.c
HW5/: CMakeLists.txt  hw5_i2c.c
HW6/: CMakeLists.txt  hw6.c
HW7/: CMakeLists.txt  font.h  hw7.c
HW9/: CMakeLists.txt  hw9.c
